--- a/gb/19/3/24/n11135609.md
+++ b/gb/19/3/24/n11135609.md
@@ -3,13 +3,12 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>近千名与会者 感念器捐者与大体老师大爱</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/03/65b918d5155a026d5f9b786b79668eea-600x400.jpg" />
-<h6>2019年“长庚器官捐赠与大体老师追思大会”，千人与会感念器捐者与大体老师大爱。 （长庚大学提供）
-</h6>
+<h6>2019年“长庚器官捐赠与大体老师追思大会”，千人与会感念器捐者与大体老师大爱。 （长庚大学提供）</h6>
 <hr>
 <p>【大纪元2019年03月24日讯】（大纪元记者陈建霖台湾桃园报导）近千名与会者参加2019年“长庚器官捐赠与大体老师追思大会”，感谢器官捐赠者及大体老师的无私奉献而团聚，会场凝聚着对先人的缅怀感念之情，与对其家属难舍成全的敬佩之心。</p>
-<figure id="attachment_11135611" aria-describedby="caption-attachment-11135611" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/03/a23a2978f9af608e1f519940c6b15b0c.jpg"><img loading="lazy" decoding="async" class="wp-image-11135611 size-large" src="https://i.epochtimes.com/assets/uploads/2019/03/a23a2978f9af608e1f519940c6b15b0c-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11135611" class="wp-caption-text">捐赠者家属至“遗爱人间”纪念牌前献花。（长庚大学提供）</figcaption></figure>
+<figure id="attachment_11135611" aria-describedby="caption-attachment-11135611" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/03/a23a2978f9af608e1f519940c6b15b0c.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="wp-image-11135611 size-large" src="https://i.epochtimes.com/assets/uploads/2019/03/a23a2978f9af608e1f519940c6b15b0c-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-11135611" class="wp-caption-text">捐赠者家属至“遗爱人间”纪念牌前献花。（长庚大学提供）</figcaption></figure>
 <p>长庚大学与长庚医院于每年清明节前夕都会举办追思大会，今年由长庚大学邱文科主任秘书与长庚纪念医院程文俊主任委员主持，去（2018）年4月敬鹏工厂火场殉职勇消林尉熙家属，及11月国一南下湖口路段执勤遭撞殉职的国道员警王黄冠钧家属也都到场。</p>
-<figure id="attachment_11135612" aria-describedby="caption-attachment-11135612" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/03/dc69ef8abac4c976938736cd58936735.jpg"><img loading="lazy" decoding="async" class="wp-image-11135612 size-large" src="https://i.epochtimes.com/assets/uploads/2019/03/dc69ef8abac4c976938736cd58936735-600x573.jpg" alt="" width="600" b="573" /></a><figcaption id="caption-attachment-11135612" class="wp-caption-text">中医系程嘉淳同学（右）向大体老师家属献花，由殷文珍女士代表收下。（长庚大学提供）</figcaption></figure>
+<figure id="attachment_11135612" aria-describedby="caption-attachment-11135612" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/03/dc69ef8abac4c976938736cd58936735.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="wp-image-11135612 size-large" src="https://i.epochtimes.com/assets/uploads/2019/03/dc69ef8abac4c976938736cd58936735-600x573.jpg" alt="" width="600" b="573"></a><figcaption id="caption-attachment-11135612" class="wp-caption-text">中医系程嘉淳同学（右）向大体老师家属献花，由殷文珍女士代表收下。（长庚大学提供）</figcaption></figure>
 <p>长庚统计去年器官捐赠者有55位，大体老师有18位，总共73位。捐赠者各有不同的生活背景，有认真投入的社会中坚、有迈步热情的筑梦青年、有为民服务的公职人员、有为爱撑腰的辛苦双亲，他们在人生谢幕之际，仍以最后的力量加惠他人，如此大公大爱，不止成就许多生命的重生，也引导医学生探索曲折的医学智慧，对社会的贡献不言而喻。</p>
 <p>因肺脏移植而获新生的林淑华，代表受赠者向器官捐赠者家属表达感谢与献花，由林尉熙先生胞妹林欣洁小姐代表收下。林淑华小姐罹患的是罕见疾病“原发性肺动脉高压”，发病时会胸痛、无法呼吸，后来因为口服药物效果变差，医师改成注射型血管扩张剂治疗，但她在过程中出现严重过敏反应，全身肿痛，甚至要家人搀扶才能起身如厕，从2017年9月完成15小时的移植手术，开始漫长的复健之路，到现在，她能大口呼吸，一口气多爬几层楼也弥足珍贵。</p>
 <p>林小姐更说，没有人比肺移植患者更能感受呼吸的意义，这一切都要归功于捐赠者的大爱－－4通电话代表4个希望，却也代表4个家庭正在承受失去亲人的悲伤，所以她特别感谢器官捐赠者与其家属的善心善念，也期望器官捐赠者家属们能因为她的重生而看见希望。</p>
@@ -17,41 +16,32 @@
 <p>会后，家属们前往校内“遗爱人间”纪念牌前献花，悼念他们挚爱而又伟大的亲人，同时也祝福因大爱而重生的受赠者与因大体老师无私舍身而受教的学子们，能够延续生命的美好，让生命之花持续散播绽放。</p>
 <p>责任编辑：英祯</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/18/n8604454.md#1">器官劝募15年 台社工师救3千人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/29/n10096655.md#1">基隆长庚医院年投入千万关怀宜兰偏乡学校</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/7/n10199595.md#1">心脏移植病人参加长跑 感谢器官捐赠家庭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/16/n10398315.md#1">落实分级医疗  长庚医院携手278家社区医疗院所</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/4/n10828954.md#1">长庚大学校运会千人路跑   国际生家乡味排队</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/18/n10859338.md#1">唐恩：医生参加会议为何被拒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/3/n10950574.md#1">长庚大学资工系  VR、AI医疗应用成果亮眼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/18/n14353185.md#1">2024桃源美展 高安柏、张天健获年度特别奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/18/n14353179.md#1">桃园在地特色食材莲藕导入营养午餐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/18/n14353101.md#1">外送平台员工权益缺乏保障 要桃园市府重视关怀</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/26/n10248973.md#1" target="_blank">还原真实的中共：年轻人乌托邦梦碎</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/2/n10015819.md#1" target="_blank">文武：中共篡政（二）</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/10/n7881771.md#1" target="_blank">大法开传 福泽众生</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348756.md#1">【未解之谜】世界古老民族共同的传说 末日预言的真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/6/n10765598.md#1">守京城、抗金兵 北宋名臣李纲的忠义故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352554.md#1">【十字路口】美国总统预言盘点 谁是天选之人？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/15/n14350735.md#1">“地狱走一遭” 鲍承模撰写回忆录《共产哀歌——红旗下的岁月》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/12/n14349141.md#1">豪迈奔放错落有致的“莼菜条描”线条美——画圣吴道子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348671.md#1">【晚间新闻】以色列击毙哈马斯头领辛瓦尔</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/11/n14348669.md#1">【环球直击】中共救房市措施不利 地产股急挫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352787.md#1">【秦鹏观察】住建部救市变砸盘 中共目的露馅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/15/n14351008.md#1">一线城市房价降声一片 “上海豪宅圈炸了”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/15/n14351192.md#1">习无法再忍受经济坏消息 中共救市政策出台内幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351449.md#1">多国停飞中国航线 分析：冲击中国经济</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/15/n14351210.md#1">《不可能任务8》杀青 阿汤哥结束5年旅居生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/15/n14351242.md#1">32岁网红脑溢血昏迷8天后离世 身后留下4幼子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352678.md#1">《桃李无言》上映首日零票房 院线排片仅一场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351942.md#1">范冰冰《地母》杀青 有望进攻明年国际影展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/15/n14351286.md#1">杜汶泽在美达拉斯发文打卡 爱台护台语汇获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352325.md#1">这两种清洁用品混合会产生毒气 严重会致命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351629.md#1">为何你有白发？ 压力会让人的头发变白吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351484.md#1">经历和职位总有一天要放手 50岁后应做什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/15/n14351029.md#1">10分钟简易脖子减压运动 改善不舒服症状</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/15/n14350874.md#1">如何赶走入侵花园的松鼠？ 专家教你几招</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652050.md#1">【直播】听证会：中共在拉丁美洲的组织犯罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/24/n11135609.htm">近千名与会者 感念器捐者与大体老师大爱</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/19/3/24/n11135609.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
