--- a/gb/25/4/20/n14487342.md
+++ b/gb/25/4/20/n14487342.md
@@ -18,12 +18,12 @@
 <p>（点击<u><ahref="https://www.youtube.com/watch?v=Sqh0Njy35PA" target="_blank" rel="noopener">这里</a></u>可以看相关短片）</p>
 <p>责任编辑：李天琦#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/26/n14210904.md#1">澳航飞机空中发出巨响 引擎在降落前失灵</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259577.md#1">联合航空一空客飞机引擎起火 机上153人撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260264.md#1">荷兰阿姆斯特丹机场一人卷入飞机引擎身亡</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390876.md#1">美国航空飞机引擎遭鸟击 紧急转降肯尼迪机场</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/12/n11446723.md#1" target="_blank">曹长青：美国成为唯一超强的秘密</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/5/n10539350.md#1" target="_blank">中国奥运泳坛明星经历的人生巨变</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
