--- a/gb/24/12/23/n14396059.md
+++ b/gb/24/12/23/n14396059.md
@@ -79,12 +79,12 @@
 <figure id="attachment_14396105" aria-describedby="caption-attachment-14396105" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/12/id14396105-GettyImages-2190278683.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14396105" src="https://i.epochtimes.com/assets/uploads/2024/12/id14396105-GettyImages-2190278683.jpg" alt="" width="599" b="399"></a><figcaption id="caption-attachment-14396105" class="wp-caption-text">2024年12月21日，人们聚集在以色列北部城市海法（Haifa）的德国殖民区圣诞集市，感受浓浓的节日气氛。 (Ahmad Gharabli/AFP via Getty Images)</figcaption></figure>
 <p>责任编辑：高静#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386171.md#1">纽约市华埠最大圣诞树点灯亮相 民代与居民同欢庆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388841.md#1">组图一：圣诞将至 世界点亮璀璨灯饰迎佳节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389238.md#1">缤纷耶诞灯火 台中柳川浪漫之夜抢先看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393201.md#1">组图：圣诞节 纽约上州农场童趣体验</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/29/n9782865.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">走出磨难 费城女医生找到真正的自我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
